[package]
name = "kuka"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Kuka RSI Controller"
repository = "https://github.com/NoahFriendo/kuka-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version="0.31.0", features=["serialize"]}
serde = {version="1.0.194", features=["derive"]}
